poke/testsuite/poke.pkl/offsets-diag-1.pk
/* { dg-do compile } */

deftype Foo = struct { int i @ 0#B; };

defvar o = 23#Foo; /* { dg-error "complete types" } */
